[package]
name = "xmt"
description = "Batteries-included CLI output library for Rust"
repository = "https://github.com/dalloriam/xmt"
homepage = "https://github.com/dalloriam/xmt"
version = "0.1.1"
edition = "2021"
authors = ["William Dussault <william@dussault.dev>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
colored = "2.0.0"
once_cell = "1.10.0"
parking_lot = "0.12.0"
ptree = {version = "0.4.0", features = ["serde-value"]}
serde = "1.0.137"
serde_json = "1.0.80"
serde-value = "0.7.0"
